<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_load_image"
        android:orderInCategory="100"
        android:title="@string/btnLoad"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bend_image"
        android:orderInCategory="200"
        android:title="@string/btnBend"
        app:showAsAction="never"
        ></item>
    <item
        android:id="@+id/action_bend_options"
        android:orderInCategory="300"
        android:title="@string/btnBendOptions"

        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_reload_image"
        android:orderInCategory="400"
        android:title="@string/strReloadImage"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_save_image"
        android:orderInCategory="500"
        android:title="@string/btnSave"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_bend_video"
        android:orderInCategory="600"
        android:title="Bend Video"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_take_image"
        android:orderInCategory="700"
        android:title="@string/strTakeImage"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_open_preferences"
        android:orderInCategory="800"
        android:title="@string/strOpenPreferences"
        app:showAsAction="never"></item>
</menu>