<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_data_source_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chris.imagebender.DataSourceSelectionActivity"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_dark"
    android:weightSum="1">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rgSourceSelection"
        android:checkedButton="@+id/rdRandomNumber">

        <RadioButton
            android:text="@string/strRandomNumberSrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdRandomNumber"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/strConstantNumberSrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdBytewiseConstant"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/strTextSrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdText"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/strImageSrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdOtherImage"
            android:layout_weight="1" />

    </RadioGroup>

    <EditText
        android:layout_width="356dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etConstantNumber"
        android:hint="@string/strNumberSrcHint"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etPlaintext"
        android:hint="@string/strTextSrcHint"
        android:layout_weight="1.01"
        android:isScrollContainer="false" />

    <Button
        android:text="@string/strBtnLoadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLoadImageAsDataSource" />

</LinearLayout>
