<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_preferences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chris.imagebender.PreferencesActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinOutputFormat"
        android:entries="@array/strArrayOutputFormat"
        android:spinnerMode="dialog"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp" />

    <TextView
        android:text="@string/strOutputFileFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/txtOutputFileFormat"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinOutputFormat"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp">

        <CheckBox
            android:text="@string/strPreserveOriginalAlpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkPreserveTrans" />

        <CheckBox
            android:text="@string/strReopenLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkRememberLast" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/strResetDefaults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnResetAll"
                android:gravity="center_vertical|center_horizontal|center"
                android:layout_alignParentTop="true"
                android:layout_marginTop="19dp"
                android:layout_marginLeft="125dp"
                android:layout_marginRight="125dp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
